--- a/app/src/main/res/layout/tri_images_layout.xml
+++ b/app/src/main/res/layout/tri_images_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="10dp" android:layout_marginLeft="10dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:layout_marginLeft="10dp" android:orientation="horizontal">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -13,6 +13,9 @@
         android:clickable="true"
         />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:orientation="vertical">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,4 +34,5 @@
         android:layout_marginTop="5dp"
         android:clickable="true"
         />
-</RelativeLayout>
+    </LinearLayout>
+</LinearLayout>
